// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeExample component renders component correctly 1`] = `
<DocumentFragment>
  <span
    class="nhsuk-u-visually-hidden"
    id="test-id"
  >
    This is an example of markdown:
  </span>
  <pre
    class="nhsuk-code-block"
  >
    <code
      aria-describedby="test-id"
    >
      # A test example
    </code>
  </pre>
</DocumentFragment>
`;

exports[`CodeExample component renders component correctly when optional class is provided 1`] = `
<DocumentFragment>
  <span
    class="nhsuk-u-visually-hidden"
    id="test-id"
  >
    This is an example of markdown:
  </span>
  <pre
    class="nhsuk-code-block"
  >
    <code
      aria-describedby="test-id"
      class="test-class"
    >
      # A test example
    </code>
  </pre>
</DocumentFragment>
`;
